--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "version": "0.0.2",
   "type": "module",
   "scripts": {
+    "test": "pnpm lint && prettier --check src",
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write src",
+    "lint": "eslint src",
+    "preversion": "pnpm test",
+    "version": "",
+    "postversion": "git push && git push --tags"
   },
   "dependencies": {
     "pinia": "^2.1.7",
@@ -15,12 +21,44 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.5.3",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-vue": "^5.0.3",
+    "vite-svg-loader": "^5.1.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
     "autoprefixer": "^10.4.17",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^9.22.0",
     "postcss": "^8.4.35",
-    "typescript": "^5.2.2",
+    "prettier": "^3.2.5",
+    "typescript": "^5.3.3",
     "vite": "^5.1.0",
+    "vue-eslint-parser": "^9.4.2",
     "vue-tsc": "^1.8.27"
+  },
+  "prettier": {
+    "printWidth": 100,
+    "quoteProps": "consistent"
+  },
+  "eslintConfig": {
+    "root": true,
+    "parser": "vue-eslint-parser",
+    "parserOptions": {},
+    "extends": [
+      "plugin:vue/strongly-recommended",
+      "eslint:recommended",
+      "@vue/typescript/recommended",
+      "prettier"
+    ],
+    "plugins": [
+      "@typescript-eslint",
+      "prettier"
+    ],
+    "rules": {}
   }
 }
