--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-vue": "^5.0.3",
-    "vite-svg-loader": "^5.1.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.57.0",
@@ -38,6 +37,8 @@
     "prettier": "^3.2.5",
     "typescript": "^5.3.3",
     "vite": "^5.1.0",
+    "vite-plugin-pwa": "^0.19.3",
+    "vite-svg-loader": "^5.1.0",
     "vue-eslint-parser": "^9.4.2",
     "vue-tsc": "^1.8.27"
   },
